5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1684_1105.log
== TEST (2019-04-24 19:51:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = lower.()input("Descricao do brasao: ")
print('Entrada:', brasao)
if (brasao == lobo):
	print("Casa Stark")
elif (brasao == leao):
-- ERROR:
File "XXXX", line 4
    brasao = lower.()input()
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:52:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = .lower()input("Descricao do brasao: ")
print('Entrada:', brasao)
if (brasao == lobo):
	print("Casa Stark")
elif (brasao == leao):
-- ERROR:
File "XXXX", line 4
    brasao = .lower()input()
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:52:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Descricao do brasao: ").lower()
print('Entrada:', brasao)
if (brasao == lobo):
	print("Casa Stark")
elif (brasao == leao):
-- ERROR:
File "XXXX", line 9
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:52:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Descricao do brasao: ").lower()
print('Entrada:', brasao)

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:55:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Descricao do brasao: ").lower()
print('Entrada:', brasao)

if (brasao == 'lobo'):
	print("Casa Stark")
elif (brasao == 'leao'):
	print("Casa Lannister")
elif (brasao == 'veado'):
	print("Casa Baratheon")
elif (brasao == 'dragao'):
	print("Casa Targaryen")
elif (brasao == 'rosa'):
	print("Casa Tyrell")
elif (brasao == 'sol'):
	print("Casa Martell")
elif (brasao == "lula"):
	print("Casa Greyjoy")
elif (brasao == "esfolado"):
	print("Casa Bolton")
elif (brasao == "turta"):
	print("Casa Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:56:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Descricao do brasao: ").lower()
print('Entrada:', brasao)

if (brasao == 'lobo'):
	print("Casa: Stark")
elif (brasao == 'leao'):
	print("Casa: Lannister")
elif (brasao == 'veado'):
	print("Casa: Baratheon")
elif (brasao == 'dragao'):
	print("Casa: Targaryen")
elif (brasao == 'rosa'):
	print("Casa: Tyrell")
elif (brasao == 'sol'):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:56:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Descricao do brasao: ").lower()
print('Entrada:', brasao)

if (brasao == 'lobo'):
	print("Casa: Stark")
elif (brasao == 'leao'):
	print("Casa: Lannister")
elif (brasao == 'veado'):
	print("Casa: Baratheon")
elif (brasao == 'dragao'):
	print("Casa: Targaryen")
elif (brasao == 'rosa'):
	print("Casa: Tyrell")
elif (brasao == 'sol'):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.182867
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
